--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@ main section.active{ display:block; }
         <a class="menu-link" href="/history" data-target="history" role="menuitem">History of Research</a>
         <a class="menu-link" href="/database" data-target="database" role="menuitem">Toolbox Database</a>
         <a class="menu-link" href="/example-text" data-target="example-text" role="menuitem">Example of a Text</a>
-        <a class="menu-link" href="/documentation" data-target="documentation" role="menuitem">Documentation</a>
-        <a class="menu-link" href="/news" data-target="news" role="menuitem">News</a>
+          <a class="menu-link" href="/news" data-target="news" role="menuitem">News</a>
         <a class="menu-link" href="/team" data-target="team" role="menuitem">Team</a>
         <a class="menu-link" href="/budget" data-target="budget" role="menuitem">Budget</a>
       </div>
@@ -389,9 +388,10 @@ You can help by:</p>
 
 <!-- ===================== DONATION HUB ===================== -->
 <section id="donate-hub" class="donate-page active" style="text-align:center;">
-  <h2 id="donate-title">Support the Supyire Lexicography Project</h2>
-  <p>Choose one of the following trusted ways to contribute to the project.</p>
-
+<h2> <strong>ways to donate to Supyire Lexicography Project</strong></h2>
+  <p>There are two charities in the US which receive and transmit funds for the project to AIU in Kenya. These charities provide tax deductible receipts for donations.</p>
+<p>The prefered method is through the charity International Generosity, which is affiliated with Trust Bridge Global. A second method, if you prefer to use PayPal, is through the charity Christian Leaders for Africa, which is affiliated with AIU.</p>
+<p><strong style="color:blue;">NOTE :</strong>Donors who are not in the USA can  got to <a href="https://internationalgenerosity.com" target="_blank"><strong>internationalgenerosity.com</strong></a>, select Africa International University, fill in Linguistic Project and follow the rest of the instructions. Each country has different charity donation laws.
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:16px; margin-top:26px;">
     <button class="donate-btn-main" type="button" onclick="showDonate('donation1')">
       <img src="images/trustbridge.webp" alt="International Generosity Logo" class="donate-btn-logo">
@@ -412,6 +412,7 @@ You can help by:</p>
 
 <!-- ===================== DONATION 1 ===================== -->
 <section id="donation1" class="donate-page">
+
   <h2>
       1. International Generosity (TrustBridge Global)
   </h2>
@@ -424,9 +425,12 @@ You can help by:</p>
   <img src="images/Picture4.jpg" alt="Step 3" loading="lazy">
   <p>Under <strong>3. Make a contribution</strong>, enter your amount.</p>
   <img src="images/Picture5.jpg" alt="Step 4" loading="lazy">
-  <p><strong style="color:blue;">THIS IS IMPORTANT:</strong> In <strong>Contribution Purpose</strong>, write <strong style="color:blue;">Linguistic Project</strong>.</p>
+  <p><strong style="color:blue;"> IMPORTANT :</strong>  In <strong>Contribution Purpose</strong>, write <strong style="color:blue;">Linguistic Project</strong>.</p>
   <img src="images/Picture6.jpg" alt="Step 5" loading="lazy">
-  <p>Fill in your information, then click <strong>NEXT</strong>.</p>
+  <p>Under 4. (Giver information), fill in the information requested, then click on <strong>NEXT</strong>.</p>
+  <p>If the summary of information on the next page is correct, click on <strong>CONTINUE TO PAYMENTS/strong>.</p>
+Follow the instructions on the next page. These instructions are different for each contribution type.
+</p>
   <img src="images/Picture7.jpg" alt="Step 6" loading="lazy">
   <p>Confirm your information and continue to payment.</p>
   <img src="images/Picture8.jpg" alt="Step 7" loading="lazy">
@@ -445,7 +449,7 @@ You can help by:</p>
   <img src="images/Picture10.jpg" alt="CLA Page" loading="lazy">
   <p>Enter your amount and select PayPal or card payment.</p>
   <img src="images/Picture11.jpg" alt="CLA Form" loading="lazy">
-  <p><strong style="color:blue;">IMPORTANT:</strong> In <em>“Add special instructions to the seller”</em>, write <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
+  <p><strong style="color:blue;">IMPORTANT  :</strong>  In <em>“Add special instructions to the seller”</em>, write <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
   <p>If you wish to donate through CLA with a physical check, please make the check payable to <strong>Christian Leaders for Africa</strong> and note that it is for <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
   <p><strong>Mailing Address:</strong><br>
   Christian Leaders for Africa<br>
@@ -882,6 +886,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
