--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Since 1990, both the lexical and text collection work has been carried out with 
     <p>The current lexical database is in a computer program called Toolbox, developed by SIL. This database needs to be regularized, corrected, and enhanced with more and better example sentences.
 After thorough revision, the database must be transferred to another program, FLEx, also developed by SIL. From FLEx, the Supyire-French and Supyire-English dictionaries can be printed, and apps for smartphones can be created. The phone apps will be made available at no or very low cost.</p>
     <div class="center" style="margin-top:18px;">
-      <strong>Example of alexical entry</strong><br>
+      <strong>Example of a lexical entry</strong><br>
       <img src="images/entry on kakɔɔn.jpg" alt="Example Text" style="width:60%;max-width:700px;border-radius:12px;box-shadow:0 6px 20px rgba(0,0,0,0.15);">
     </div>
   </section>
@@ -428,7 +428,7 @@ You can help by:</p>
   <p><strong style="color:blue;"> IMPORTANT :</strong>  In <strong>Contribution Purpose</strong>, write <strong style="color:blue;">Linguistic Project</strong>.</p>
   <img src="images/Picture6.jpg" alt="Step 5" loading="lazy">
   <p>Under 4. (Giver information), fill in the information requested, then click on <strong>NEXT</strong>.</p>
-  <p>If the summary of information on the next page is correct, click on <strong>CONTINUE TO PAYMENTS/strong>.</p>
+  <p>If the summary of information on the next page is correct, click on <strong>CONTINUE TO PAYMENTS</strong>.</p>
 Follow the instructions on the next page. These instructions are different for each contribution type.
 </p>
   <img src="images/Picture7.jpg" alt="Step 6" loading="lazy">
@@ -886,6 +886,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
