--- a/index.html
+++ b/index.html
@@ -376,80 +376,23 @@ You can help by:</p>
 <section id="support">
   <h2 class="center">Support the Project</h2>
   <p class="center">You can support the project through prayer or donations.</p>
-
-  <!-- Step 1: Choose Pray or Donate -->
-  <div class="center" style="margin-top:20px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
-    <button class="donate-btn-main" onclick="showSection('prayer')">🙏 Prayer</button>
-    <button class="donate-btn-main" onclick="showSection('donate-hub')">💰 Donate</button>
-  </div>
 </section>
 
+<!-- ===================== PRAYER ===================== -->
 <section id="prayer">
   <h2 class="center">Prayer Request</h2>
   <ul style="font-size: 1.1em; line-height: 1.9; color: #333; margin-top: 15px;">
     <li><strong>Unity and Collaboration</strong> – for harmony, mutual respect, and effective teamwork among all who are involved in the project.</li>
     <li><strong>Provision of Resources</strong> – for financial, technical, and human resources needed to complete the work successfully.</li>
   </ul>
-  <div class="center" style="margin-top:20px;">
-    <button class="donate-btn-main" onclick="showSection('support')">⬅ Back</button>
-  </div>
 </section>
 
 <!-- ===================== DONATION HUB ===================== -->
-<section id="donate-hub" class="donate-page">
-  <section id="donate-hub" class="donate-page active" style="text-align:center;">
-<h2> <strong>ways to donate to Supyire Lexicography Project</strong></h2>
+<section id="donate-hub" class="donate-page active" style="text-align:center;">
+  <h2><strong>Ways to Donate to Supyire Lexicography Project</strong></h2>
   <p>There are two charities in the US which receive and transmit funds for the project to AIU in Kenya. These charities provide tax deductible receipts for donations.</p>
-<p>The prefered method is through the charity International Generosity, which is affiliated with Trust Bridge Global. A second method, if you prefer to use PayPal, is through the charity Christian Leaders for Africa, which is affiliated with AIU.</p>
-<p><strong style="color:blue;">NOTE :</strong>Donors who are not in the USA can  got to <a href="https://internationalgenerosity.com" target="_blank"><strong>internationalgenerosity.com</strong></a>, select Africa International University, fill in Linguistic Project and follow the rest of the instructions. Each country has different charity donation laws.</p>
-
-  <!-- Step 2: Ask US or Other Country -->
-  <p class="center" style="margin-top:12px;">Are you donating from the US or another country?</p>
-  <div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
-    <button class="donate-btn-main" onclick="showSection('donate-us')">🇺🇸 US</button>
-    <button class="donate-btn-main" onclick="showSection('donate-other')">🌍 Other Country</button>
-  </div>
-
-  <div class="center" style="margin-top:20px;">
-    <button class="donate-btn-main" onclick="showSection('support')">⬅ Back</button>
-  </div>
-</section>
-
-<!-- ===================== DONATE US ===================== -->
-<section id="donate-us" class="donate-page">
-  <h2 class="center">US Donation Options</h2>
-  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:16px; margin-top:20px;">
-    <button class="donate-btn-main" onclick="showSection('donation1')">
-      International Generosity
-    </button>
-    <button class="donate-btn-main" onclick="showSection('donation2')">
-      Christian Leaders for Africa (CLA)
-    </button>
-    <button class="donate-btn-main" onclick="showSection('donation3')">
-      Bank Transfer
-    </button>
-  </div>
-  <div class="center" style="margin-top:20px;">
-    <button class="donate-btn-main" onclick="showSection('donate-hub')">⬅ Back</button>
-  </div>
-</section>
-
-<!-- ===================== DONATE OTHER ===================== -->
-<section id="donate-other" class="donate-page">
-  <h2 class="center">Donation Options for Other Countries</h2>
-  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:16px; margin-top:20px;">
-    <button class="donate-btn-main" onclick="showSection('donation2')">
-      Christian Leaders for Africa (CLA)
-    </button>
-    <button class="donate-btn-main" onclick="showSection('donation3')">
-      Bank Transfer
-    </button>
-  </div>
-  <div class="center" style="margin-top:20px;">
-    <button class="donate-btn-main" onclick="showSection('donate-hub')">⬅ Back</button>
-  </div>
-
-<!-- ===================== DONATION HUB ===================== -->
+  <p>The preferred method is through <strong>International Generosity</strong>, affiliated with Trust Bridge Global. A second method, if you prefer PayPal, is through <strong>Christian Leaders for Africa</strong>, affiliated with AIU.</p>
+  <p><strong style="color:blue;">NOTE:</strong> Donors outside the USA can go to <a href="https://internationalgenerosity.com" target="_blank"><strong>internationalgenerosity.com</strong></a>, select Africa International University, fill in Linguistic Project, and follow the instructions. Each country has different charity laws.</p>
 
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:16px; margin-top:26px;">
     <button class="donate-btn-main" type="button" onclick="showDonate('donation1')">
@@ -469,12 +412,9 @@ You can help by:</p>
   </div>
 </section>
 
-<!-- ===================== DONATION 1 ===================== -->
+<!-- ===================== DONATION 1: International Generosity ===================== -->
 <section id="donation1" class="donate-page">
-
-  <h2>
-      1. International Generosity (TrustBridge Global)
-  </h2>
+  <h2>1. International Generosity (TrustBridge Global)</h2>
 
   <p>Visit <a href="https://internationalgenerosity.com" target="_blank"><strong>internationalgenerosity.com</strong></a> and click <strong>“Donate Now”</strong>.</p>
   <img src="images/Picture1.jpg" alt="Step 1" loading="lazy">
@@ -484,12 +424,10 @@ You can help by:</p>
   <img src="images/Picture4.jpg" alt="Step 3" loading="lazy">
   <p>Under <strong>3. Make a contribution</strong>, enter your amount.</p>
   <img src="images/Picture5.jpg" alt="Step 4" loading="lazy">
-  <p><strong style="color:blue;"> IMPORTANT :</strong>  In <strong>Contribution Purpose</strong>, write <strong style="color:blue;">Linguistic Project</strong>.</p>
+  <p><strong style="color:blue;">IMPORTANT:</strong> In <strong>Contribution Purpose</strong>, write <strong style="color:blue;">Linguistic Project</strong>.</p>
   <img src="images/Picture6.jpg" alt="Step 5" loading="lazy">
-  <p>Under 4. (Giver information), fill in the information requested, then click on <strong>NEXT</strong>.</p>
-  <p>If the summary of information on the next page is correct, click on <strong>CONTINUE TO PAYMENTS</strong>.</p>
-Follow the instructions on the next page. These instructions are different for each contribution type.
-</p>
+  <p>Under <strong>4. Giver information</strong>, fill in the information requested, then click <strong>NEXT</strong>.</p>
+  <p>If the summary of information on the next page is correct, click <strong>CONTINUE TO PAYMENTS</strong>. Follow instructions according to your chosen contribution type.</p>
   <img src="images/Picture7.jpg" alt="Step 6" loading="lazy">
   <p>Confirm your information and continue to payment.</p>
   <img src="images/Picture8.jpg" alt="Step 7" loading="lazy">
@@ -498,18 +436,16 @@ Follow the instructions on the next page. These instructions are different for e
   <button class="donate-btn-main" type="button" onclick="showDonate('donate-hub')">⬅ Back to Options</button>
 </section>
 
-<!-- ===================== DONATION 2 ===================== -->
+<!-- ===================== DONATION 2: Christian Leaders for Africa ===================== -->
 <section id="donation2" class="donate-page">
-  <h2>
-    2. Christian Leaders for Africa (CLA)
-  </h2>
+  <h2>2. Christian Leaders for Africa (CLA)</h2>
 
   <p>Visit <a href="https://www.clafrica.com" target="_blank"><strong>clafrica.com</strong></a> and click <strong>“Donate to CLA”</strong>.</p>
   <img src="images/Picture10.jpg" alt="CLA Page" loading="lazy">
   <p>Enter your amount and select PayPal or card payment.</p>
   <img src="images/Picture11.jpg" alt="CLA Form" loading="lazy">
-  <p><strong style="color:blue;">IMPORTANT  :</strong>  In <em>“Add special instructions to the seller”</em>, write <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
-  <p>If you wish to donate through CLA with a physical check, please make the check payable to <strong>Christian Leaders for Africa</strong> and note that it is for <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
+  <p><strong style="color:blue;">IMPORTANT:</strong> In <em>“Add special instructions to the seller”</em>, write <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
+  <p>If you wish to donate via check, make it payable to <strong>Christian Leaders for Africa</strong> and note <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
   <p><strong>Mailing Address:</strong><br>
   Christian Leaders for Africa<br>
   PO Box 3302,<br>
@@ -518,7 +454,7 @@ Follow the instructions on the next page. These instructions are different for e
   <button class="donate-btn-main" type="button" onclick="showDonate('donate-hub')">⬅ Back to Options</button>
 </section>
 
-<!-- ===================== DONATION 3 ===================== -->
+<!-- ===================== DONATION 3: Bank Transfer ===================== -->
 <section id="donation3" class="donate-page">
   <h2>
     <img src="images/stanbic.webp" alt="Bank Logo" class="donate-logo">
@@ -534,123 +470,6 @@ Follow the instructions on the next page. These instructions are different for e
 
   <button class="donate-btn-main" type="button" onclick="showDonate('donate-hub')">⬅ Back to Options</button>
 </section>
-
-<!-- ===================== STYLES ===================== -->
-<style>
-  .donate-btn-main {
-    background:#4c3f91;
-    color:#fff;
-    border:none;
-    border-radius:10px;
-    padding:14px 22px;
-    cursor:pointer;
-    font-weight:700;
-    font-size:1.1rem;
-    display:inline-flex;
-    align-items:center;
-    gap:10px;
-    transition:background .25s ease, transform .18s ease;
-  }
-  .donate-btn-main:hover {
-    background:#6b58c2;
-    transform:translateY(-2px);
-  }
-
-  .donate-btn-logo {
-    width:44px;
-    height:44px;
-    object-fit:contain;
-    border-radius:8px;
-    background:#fff;
-    padding:4px;
-    box-shadow:0 3px 8px rgba(0,0,0,0.12);
-  }
-
-  .donate-logo {
-    width:70px;
-    height:70px;
-    object-fit:contain;
-    border-radius:8px;
-    background:#fff;
-    padding:4px;
-    margin-right:10px;
-    box-shadow:0 3px 8px rgba(0,0,0,0.12);
-    vertical-align:middle;
-  }
-
-  .donate-page {
-    display:none;
-    opacity:0;
-    transform:translateY(14px);
-    transition:opacity .3s ease, transform .3s ease;
-    text-align:justify;
-    padding:36px 22px;
-    font-size:1.15rem;
-    line-height:1.9;
-    color:#222;
-    max-width:850px;
-    margin:0 auto;
-  }
-
-  .donate-page.active {
-    display:block;
-    opacity:1;
-    transform:translateY(0);
-  }
-
-  .donate-page img[loading] {
-    width:85%;
-    max-width:650px;
-    margin:20px auto;
-    border-radius:10px;
-    display:block;
-    box-shadow:0 6px 18px rgba(0,0,0,0.08);
-  }
-
-  .donate-page h2 {
-    font-size:1.6rem;
-    font-weight:800;
-    color:#4c3f91;
-    text-align:center;
-    margin-bottom:18px;
-  }
-
-  #donate-title {
-    font-size:1.8rem;
-    font-weight:800;
-    color:#4c3f91;
-    margin-bottom:14px;
-    text-align:center;
-  }
-
-  @media (max-width:768px) {
-    .donate-btn-main {
-      font-size:1rem;
-      padding:12px 18px;
-    }
-    .donate-logo {
-      width:60px;
-      height:60px;
-    }
-  }
-</style>
-
-<!-- ===================== SCRIPT ===================== -->
-<script>
-function showDonate(id) {
-  document.querySelectorAll('.donate-page').forEach(sec => {
-    sec.classList.remove('active');
-  });
-  const target = document.getElementById(id);
-  if (target) {
-    target.classList.add('active');
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-  }
-}
-</script>
-
-
-
   <!-- CONTACT -->
 <section id="contact">
   <h2 class="center" style="color:#4c3f91;">Contact Us</h2>
@@ -945,6 +764,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
