--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ You can help by:</p>
   <!-- Step 2: Ask US or Other Country -->
   <p class="center" style="margin-top:12px;">Are you donating from the US or another country?</p>
   <div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
-    <button class="donate-btn-main" onclick="showSection('donate-us')">🇺🇸 US</button>
+    <button class="donate-btn-main" onclick="showSection('donate-us')"The US</button>
     <button class="donate-btn-main" onclick="showSection('donate-other')">🌍 Other Country</button>
   </div>
 
@@ -905,3 +905,4 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
