--- a/index.html
+++ b/index.html
@@ -476,9 +476,11 @@ You can help by:</p>
 <!-- ===================== DONATION HUB ===================== -->
 <section id="donate-hub" class="donate-page active" style="text-align:center;">
   <h2><strong>Ways to Donate to Supyire Lexicography Project</strong></h2>
-  <p class="center" style="margin-top:12px;">Are you donating from the US or another country?</p>
+  <p>There are two charities in the US which receive and transmit funds for the project to AIU in Kenya. These charities provide tax deductible receipts for donations.</p>
+  <p>The prefered method is through the charity International Generosity, which is affiliated with Trust Bridge Global. A second method, if you prefer to use PayPal, is through the charity Christian Leaders for Africa, which is affiliated with AIU.</p>
+  <p class="center" style="margin-top:12px;"><strong>Are you donating from the US or another country?</strong></p>
   <div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
-    <button class="donate-btn-main" onclick="showSection('donate-us')">🇺🇸 The US</button>
+    <button class="donate-btn-main" onclick="showSection('donate-us')"> The US</button>
     <button class="donate-btn-main" onclick="showSection('donate-other')">🌍 Other Country</button>
   </div>
 
@@ -493,21 +495,40 @@ You can help by:</p>
 
   <!-- International Generosity -->
   <h3>1. International Generosity (TrustBridge Global)</h3>
-  <p>Visit <a href="https://internationalgenerosity.com" target="_blank"><strong>internationalgenerosity.com</strong></a> and click <strong>“Donate Now”</strong>.</p>
-  <img src="images/Picture1.jpg" alt="Step 1">
+ <p>Visit <a href="https://internationalgenerosity.com" target="_blank"><strong>internationalgenerosity.com</strong></a> and click <strong>“Donate Now”</strong>.</p>
+  <img src="images/Picture1.jpg" alt="Step 1" loading="lazy">
   <p>Under <strong>1. Select a Charity or Fund</strong>, choose <strong>Africa International University (global) (#TGF243189)</strong>.</p>
-  <img src="images/Picture2.jpg" alt="Step 2">
+  <img src="images/Picture2.jpg" alt="Step 2" loading="lazy">
   <p>Under <strong>2. Select a contribution type</strong>, choose your payment method.</p>
-  <img src="images/Picture4.jpg" alt="Step 3">
-  <p><strong style="color:blue;">IMPORTANT:</strong> In <strong>Contribution Purpose</strong>, write <strong style="color:blue;">Linguistic Project</strong>.</p>
-  <img src="images/Picture6.jpg" alt="Step 5">
+  <img src="images/Picture4.jpg" alt="Step 3" loading="lazy">
+  <p>Under <strong>3. Make a contribution</strong>, enter your amount.</p>
+  <img src="images/Picture5.jpg" alt="Step 4" loading="lazy">
+  <p><strong style="color:blue;"> IMPORTANT :</strong>  In <strong>Contribution Purpose</strong>, write <strong style="color:blue;">Linguistic Project</strong>.</p>
+  <img src="images/Picture6.jpg" alt="Step 5" loading="lazy">
+  <p>Under 4. (Giver information), fill in the information requested, then click on <strong>NEXT</strong>.</p>
+  <p>If the summary of information on the next page is correct, click on <strong>CONTINUE TO PAYMENTS</strong>.</p>
+Follow the instructions on the next page. These instructions are different for each contribution type.
+</p>
+  <img src="images/Picture7.jpg" alt="Step 6" loading="lazy">
+  <p>Confirm your information and continue to payment.</p>
+  <img src="images/Picture8.jpg" alt="Step 7" loading="lazy">
+  <img src="images/Picture9.jpg" alt="Final Payment" loading="lazy">
 
+  <button class="donate-btn-main" type="button" onclick="showDonate('donate-hub')">⬅ Back to Options</button>
   <!-- Christian Leaders for Africa -->
   <h3>2. Christian Leaders for Africa (CLA)</h3>
-  <p>Visit <a href="https://www.clafrica.com" target="_blank"><strong>clafrica.com</strong></a> and click <strong>“Donate to CLA”</strong>.</p>
-  <img src="images/Picture10.jpg" alt="CLA Page">
-  <p><strong style="color:blue;">IMPORTANT:</strong> In “Add special instructions to the seller”, write <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
-  <p>If donating by check, make it payable to <strong>Christian Leaders for Africa</strong> and note <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
+   <p>Visit <a href="https://www.clafrica.com" target="_blank"><strong>clafrica.com</strong></a> and click <strong>“Donate to CLA”</strong>.</p>
+  <img src="images/Picture10.jpg" alt="CLA Page" loading="lazy">
+  <p>Enter your amount and select PayPal or card payment.</p>
+  <img src="images/Picture11.jpg" alt="CLA Form" loading="lazy">
+  <p><strong style="color:blue;">IMPORTANT  :</strong>  In <em>“Add special instructions to the seller”</em>, write <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
+  <p>If you wish to donate through CLA with a physical check, please make the check payable to <strong>Christian Leaders for Africa</strong> and note that it is for <strong style="color:blue;">AIU–Linguistic Project</strong>.</p>
+  <p><strong>Mailing Address:</strong><br>
+  Christian Leaders for Africa<br>
+  PO Box 3302,<br>
+  Carmel, IN 46082</p>
+
+  <button class="donate-btn-main" type="button" onclick="showDonate('donate-hub')">⬅ Back to Options</button>
 
   <!-- Bank Transfer -->
   <h3>3. Bank Transfer to AIU</h3>
@@ -846,4 +867,5 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
