--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ You can help by:</p>
 
 <!-- ===================== DONATE US OPTIONS ===================== -->
 <section id="donate-us-options" class="donate-page">
-  <h2 class="center">🇺🇸 US Donation Options</h2>
+  <h2 class="center"> US Donation Options</h2>
   <p class="center">Select one of the following donation methods:</p>
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:16px; margin-top:20px;">
     <button class="donate-btn-main" onclick="showSection('donation1')">International Generosity (TrustBridge Global)</button>
@@ -863,6 +863,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
