--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ You can help by:</p>
   <p>The preferred method is through the charity International Generosity, which is affiliated with TrustBridge Global. A second method, if you prefer to use PayPal, is through the charity Christian Leaders for Africa, which is affiliated with AIU.</p>
   <p class="center" style="margin-top:12px;"><strong>Are you donating from the US or another country?</strong></p>
   <div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
-    <button class="donate-btn-main" onclick="showSection('donate-us-options')">🇺🇸 The US</button>
+    <button class="donate-btn-main" onclick="showSection('donate-us-options')"> The US</button>
     <button class="donate-btn-main" onclick="showSection('donate-other-options')">🌍 Other Country</button>
   </div>
   <div class="center" style="margin-top:20px;">
@@ -863,6 +863,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
