--- a/index.html
+++ b/index.html
@@ -475,9 +475,8 @@ You can help by:</p>
 
 <!-- ===================== DONATION HUB ===================== -->
 <section id="donate-hub" class="donate-page active" style="text-align:center;">
-  <h2><strong>Ways to Donate to Supyire Lexicography Project</strong></h2>
-  <p>There are two charities in the US which receive and transmit funds for the project to AIU in Kenya. These charities provide tax deductible receipts for donations.</p>
-  <p>The preferred method is through the charity International Generosity, which is affiliated with TrustBridge Global. A second method, if you prefer to use PayPal, is through the charity Christian Leaders for Africa, which is affiliated with AIU.</p>
+  <h2><strong>Ways to Donate to the Supyire Lexicography Project</strong></h2>
+ 
   <p class="center" style="margin-top:12px;"><strong>Are you donating from the US or another country?</strong></p>
   <div class="center" style="margin-top:16px; display:flex; justify-content:center; gap:16px; flex-wrap:wrap;">
     <button class="donate-btn-main" onclick="showSection('donate-us-options')"> The US</button>
@@ -491,7 +490,8 @@ You can help by:</p>
 <!-- ===================== DONATE US OPTIONS ===================== -->
 <section id="donate-us-options" class="donate-page">
   <h2 class="center"> US Donation Options</h2>
-  <p class="center">Select one of the following donation methods:</p>
+   <p>There are two charities in the US which receive and transmit funds for the project to AIU in Kenya. These charities provide tax deductible receipts for donations.</p>
+  <p>The preferred method is through the charity International Generosity, which is affiliated with TrustBridge Global. A second method, if you prefer to use PayPal, is through the charity Christian Leaders for Africa, which is affiliated with AIU.</p>
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:16px; margin-top:20px;">
   <button class="donate-btn-main" onclick="showSection('donation1')" style="display:flex; align-items:center; gap:10px;">
     <img src="images/trustbridge.webp" alt="International Generosity Logo" style="height:24px;">
@@ -502,7 +502,7 @@ You can help by:</p>
     <img src="images/CLA logo.png" alt="Christian Leaders for Africa Logo" style="height:24px;">
     Christian Leaders for Africa (CLA)
   </button>
-
+<p>If you do not need a tax deductible receipt, and would prefer to make an international bank transfer to the AIU bank account for the project</p>
   <button class="donate-btn-main" onclick="showSection('donation3')" style="display:flex; align-items:center; gap:10px;">
     <img src="images/stanbic.webp" alt="Bank Logo" style="height:24px;">
     Bank Transfer 
@@ -517,10 +517,12 @@ You can help by:</p>
 <section id="donate-other-options" class="donate-page">
   <h2 class="center">🌍 Donation Options for Other Countries</h2>
   <p class="center">Select one of the following donation methods:</p>
+ <p> Africa International University has an account with Trust Bridge Global which makes it easy to donate from most countries in the world. 
+   If you are in a country whose laws provide incentives for charitable giving, the Trust Bridge website will guide you through the process of donating.</p>
   <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:16px; margin-top:20px;">
   <button class="donate-btn-main" onclick="showSection('donation2')" style="display:flex; align-items:center; gap:10px;">
-    <img src="images/CLA logo.png" alt="Christian Leaders for Africa Logo" style="height:24px;">
-    Christian Leaders for Africa (CLA)
+      <img src="images/trustbridge.webp" alt="International Generosity Logo" style="height:24px;">
+    International Generosity (TrustBridge Global)
   </button>
 
   <button class="donate-btn-main" onclick="showSection('donation3')" style="display:flex; align-items:center; gap:10px;">
@@ -881,6 +883,7 @@ document.addEventListener('keydown', (e) => {
 
 </body>
 </html>
+
 
 
 
